; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_cipherlist_test.c_test_default_cipherlist_implicit.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_cipherlist_test.c_test_default_cipherlist_implicit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fixture = common dso_local global i32* null, align 8
@result = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_default_cipherlist_implicit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_default_cipherlist_implicit() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @SETUP_CIPHERLIST_TEST_FIXTURE()
  %3 = load i32*, i32** @fixture, align 8
  %4 = icmp eq i32* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %9

6:                                                ; preds = %0
  %7 = call i32 (...) @EXECUTE_CIPHERLIST_TEST()
  %8 = load i32, i32* @result, align 4
  store i32 %8, i32* %1, align 4
  br label %9

9:                                                ; preds = %6, %5
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}

declare dso_local i32 @SETUP_CIPHERLIST_TEST_FIXTURE(...) #1

declare dso_local i32 @EXECUTE_CIPHERLIST_TEST(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
